--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div>            
             <div class="cardImg">
-                <img src="./imagenes/pic04.png" alt="">
+                <img src="./imagenes/pic04.png" loading="lazy" alt="">
                 <div class='centered'><h3>Sobre nosotros</h3></div>                
             </div>
             <div>
